# Swasthya360

./: .gitignore  index.html
Swasthya360_bot/: ai_agent.py  config.py  main.py  pyproject.toml  tools.py
backend/: app.js  package.json
backend/prisma/: schema.prisma
backend/src/: index.js
backend/src/config/: prisma.config.js
backend/src/controllers/: ai.controller.js  aiController.js  allergies.controller.js  chatHistory.controller.js  medical-records.controller.js  user.controller.js  vaccination.controller.js
backend/src/middleware/: auth.middleware.js
backend/src/routes/: UserRoute.js  VaccinationRoute.js  aiRoutes.js  index.js  swasthyaRouter.js
backend/src/services/: hashpassword.js
chatbot/: ai_agent.py  config.py  database.py  main.py  models.py  pyproject.toml  tools.py
diseaseoutbreak-symtomps/: package.json
diseaseoutbreak-symtomps/src/: index.ts
diseaseoutbreak-symtomps/src/router/: SymtomPrompt.ts  newsRouter.ts  symptomsRouter.ts
feature_set/: package.json
feature_set/prisma/: schema.prisma
feature_set/src/: index.ts
frontend/: package.json
frontend/src/: App.jsx  ErrorBoundary.jsx  index.css  main.jsx
frontend/src/Check-Symptoms/: Chatbot.jsx  CheckSymptom.jsx  SeveritySlider.jsx  SymptomContainer.jsx  SymptomSelector.jsx
frontend/src/Disease-Outbreak/: OutBreakPage.jsx
frontend/src/Health-Chatbot/: ChatHeader.jsx  ChatInput.jsx  ChatMessages.jsx  ChatbotContainer.jsx  ChatbotParent.jsx
frontend/src/Store/: SysmptomStore.jsx  UserStore.jsx  VaccineStore.jsx  userStore.js
frontend/src/User-Details/: MedicalDetails.jsx  PersonalDetails.jsx  UserDetails.jsx
frontend/src/Utils/: Constants.js  data.js  diseaseOutbreakData.js  vaccinesList.js
frontend/src/Vaccination-info/: AddVaccine.jsx  EmptyShedule.jsx  RecommendedVaccine.jsx  ShedVaccineCard.jsx  VaccinationPage.jsx  VaccineList.jsx  VaccineShedule.jsx
frontend/src/components/: AboutSwasthya.jsx  AuthModal.jsx  ContactInfo.jsx  EmergencyButton.jsx  FeatureSection.jsx  HeroSection.jsx  Landingpage.jsx  MedicalInfo.jsx  PersonalInfo.jsx  ServiceSection.jsx  SubHeader.jsx  Symptoms.jsx  WhatsappBot.jsx  dashboard.jsx  footer.jsx  header.jsx  hero.jsx  signin.jsx  signup.jsx
frontend/src/config/: config.js
medical_chatbot/: ai_agent.py  main.py  pyproject.toml  tools.py
whatsappbot/: package.json
whatsappbot/src/emergency/: emergency.ts
(+13 files in other folders)
