[project]
name = "swasthya360-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "dotenv>=0.9.9",
    "fastapi>=0.117.1",
    "google-generativeai>=0.8.5",
    "groq>=0.31.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.0.10",
    "langgraph>=0.6.7",
    "pillow>=11.3.0",
    "twilio>=9.8.1",
    "uvicorn>=0.36.0",
]
