[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "dotenv>=0.9.9",
    "fastapi>=0.117.1",
    "google-generativeai>=0.8.5",
    "groq>=0.31.1",
    "jwt>=1.4.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.76",
    "langchain-google-genai>=2.0.10",
    "langgraph>=0.6.7",
    "pillow>=11.3.0",
    "prisma>=0.15.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pyjwt==2.8.0",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "twilio>=9.8.1",
    "uvicorn>=0.36.0",
]
