[project]
name = "medical-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-core>=0.3.76",
    "langchain-google-genai>=2.1.11",
    "langgraph>=0.6.7",
    "ollama>=0.5.4",
    "pydantic>=2.11.9",
    "requests>=2.32.5",
    "twilio>=9.8.0",
    "uvicorn>=0.35.0",
]
